Actualización de index.html

--- a/web/index.html
+++ b/web/index.html
@@ -1,54 +1,173 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Linux - Grupo 4</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #f0f0f0;
-        }
-        .container {
-            background-color: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        h1 {
-            color: #333;
-            text-align: center;
-        }
-        .info {
-            margin: 20px 0;
-            padding: 15px;
-            background-color: #e8f4f8;
-            border-left: 4px solid #2196F3;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Proyecto Linux - Grupo 4</title>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+<style>
+body {
+  background: #0f0f0f;
+  color: #fff;
+  min-height: 100vh;
+  padding: 40px 20px;
+  position: relative;
+  overflow-x: hidden;
+  font-family: 'Roboto';
+}
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle at 20% 50%, rgba(0,255,157,0.15) 0%, transparent 50%), radial-gradient(circle at 80% 80%, rgba(0,149,255,0.15) 0%, transparent 50%);
+  pointer-events: none;
+  z-index: 0;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.titulo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.titulo h1 {
+  font-size: 3.5em;
+  font-weight: 700;
+  background: linear-gradient(135deg, #00ff9d, #0095ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  margin-bottom: 10px;
+  letter-spacing: -1px;
+}
+.titulo p {
+  color: grey;
+  font-size: 1rem;
+}
+.info {
+  display: flex;
+  gap: 25px;
+}
+.detalles, .integrantes {
+  display: flex;
+  flex-direction: column;
+  background: rgba(255,255,255,0.03);
+  border: 1px solid rgba(255,255,255,0.1);
+  border-radius: 16px;
+  padding: 40px;
+  backdrop-filter: blur(10px);
+  width: 400px;
+}
+.detalle-fila {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 0;
+  border-bottom: 1px dashed rgba(255,255,255,0.1);
+  margin: 0;
+}
+.detalles .detalle-fila:last-child {
+  border-bottom: none;
+}
+.detalle-valor {
+  text-align: right;
+}
+.titulo-detalles {
+  color: #00ff9d;
+  font-weight: bold;
+  margin-right: 15px;
+}
+.btn {
+  display: inline-block;
+  background: rgba(0,255,157,0.1);
+  color: #00ff9d;
+  padding: 6px 10px;
+  border-radius: 20px;
+  font-size: 0.85em;
+  font-weight: 600;
+  margin-right: 8px;
+  border: 1px solid rgba(0,255,157,0.3);
+}
+.gruponombres {
+  margin-top: 15px;
+}
+.integrantesnombres {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 8px 0;
+  border-bottom: 1px dashed rgba(255,255,255,0.1);
+}
+.integrantesnombres:last-child {
+  border-bottom: none;
+}
+.carnet {
+  color: #0095ff;
+  font-weight: 600;
+  text-align: right;
+}
+</style>
 </head>
 <body>
-    <div class="container">
-        <h1> Proyecto Linux - Grupo 4</h1>
-        <div class="info">
-            <h2>Información del Proyecto</h2>
-            <p><strong>Universidad:</strong> Universidad de El Salvador</p>
-            <p><strong>Asignatura:</strong> Introducción al Software Libre</p>
-            <p><strong>Servidor:</strong> servidor-grupo4</p>
-            <p><strong>Tecnología:</strong> Docker + Nginx</p>
-        </div>
-        <div class="info">
-            <h2>Integrantes del Grupo 4</h2>
-            <ul>
-                <li>Bryan Jose Moreno - MV24050 </li>
-                <li>Jose Fabricio Reyes Sermeño - RS24033</li>
-                <li>Daniel Abraham Cerritos Rivera - CR24054</li>
-                <li>Diana Judith Ventura Erazo - Ve24006</li>
-            </ul>
-        </div>
+<div class="container">
+  <div class="titulo">
+    <h1>Proyecto Linux</h1>
+    <p>Grupo 4 | Universidad de El Salvador</p>
+  </div>
+  <div class="info">
+    <div class="detalles">
+      <h2 class="titulo-detalles">Detalles del Proyecto</h2>
+      <p class="detalle-fila">
+        <span class="titulo-detalles">Universidad</span>
+        <span class="detalle-valor">Universidad de El Salvador</span>
+      </p>
+      <p class="detalle-fila">
+        <span class="titulo-detalles">Asignatura</span>
+        <span class="detalle-valor">Introducción al Software Libre</span>
+      </p>
+      <p class="detalle-fila">
+        <span class="titulo-detalles">Servidor</span>
+        <span class="detalle-valor">servidor-grupo4</span>
+      </p>
+      <p class="detalle-fila">
+        <span class="titulo-detalles">Tecnología</span>
+        <span class="detalle-valor">
+          <span class="btn">Docker</span>
+          <span class="btn">Nginx</span>
+        </span>
+      </p>
     </div>
+    <div class="integrantes">
+      <h2 class="titulo-detalles">Integrantes del Grupo 4</h2>
+      <div class="gruponombres">
+        <div class="integrantesnombres">
+          <span>Bryan Jose Moreno Villanueva</span>
+          <span class="carnet">MV24050</span>
+        </div>
+        <div class="integrantesnombres">
+          <span>Jose Fabricio Reyes Sermeño</span>
+          <span class="carnet">RS24033</span>
+        </div>
+        <div class="integrantesnombres">
+          <span>Daniel Abraham Cerritos Rivera</span>
+          <span class="carnet">CR24054</span>
+        </div>
+        <div class="integrantesnombres">
+          <span>Diana Judith Ventura Erazo</span>
+          <span class="carnet">VE24006</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
+  
